@@ -72,10 +72,10 @@ Muldis D is a computationally / Turing complete (and industrial strength)
 high-level programming language with fully integrated database
 functionality; you can use it to define, query, and update relational
 databases.  The language's paradigm is a mixture of declarative,
-functional, imperative, and object-oriented.  It is primarily focused on
-providing reliability, consistency, portability, and ease of use and
-extension.  (Logically, speed of execution can not be declared as a Muldis
-D quality because such a quality belongs to an implementation alone;
+homoiconic, functional, imperative, and object-oriented.  It is primarily
+focused on providing reliability, consistency, portability, and ease of use
+and extension.  (Logically, speed of execution can not be declared as a
+Muldis D quality because such a quality belongs to an implementation alone;
 however, the language should lend itself to making fast implementations.)
 
 Muldis D is intended to qualify as a "B<D>" language as defined by
