@@ -6,8 +6,13 @@
     * Language::MuldisD version 0.21.0 is released on CPAN as
     Language-MuldisD-0.21.0.tar.gz.
 
-    * New file versions are: MuldisD.pm 0.21.0 and PTMD_Tiny.pod 0.13.0.
-    The other pre-existing versioned files are unchanged.
+    * New file versions are: MuldisD.pm 0.21.0 and Basics.pod 0.14.1 and
+    PTMD_Tiny.pod 0.13.0.  The other pre-existing versioned files are
+    unchanged.
+
+    * (MuldisD.pm, Basics.pod)  Updated the paradigm list of Muldis D to
+    add the word "homoiconic", which I just learned about today and which
+    is strongly descriptive of any "D" language, especially of Muldis D.
 
     * (PTMD_Tiny.pod)  Updated specifier for called procedure name so it
     can be in both formats that a Cat.NameChain can have.
